--- a/chrome_extension/manifest.json
+++ b/chrome_extension/manifest.json
@@ -6,18 +6,24 @@
   "version": "1.0",
 
   "browser_action": {
-    "default_icon": "icon.png",
+    "default_icon": "icon128.png",
     "default_popup": "popup.html",
     "default_title": "GNIB Appointments"
   },
   "content_scripts": [
     {
-        "matches": ["https://burghquayregistrationoffice.inis.gov.ie/*"],
-        "js": ["appointments.js"]
+        "matches": ["https://burghquayregistrationoffice.inis.gov.ie/Website/AMSREG/AMSRegWeb.nsf/AppSelect?OpenForm"],
+        "js": ["jquery.min.js",  "sweetalert2.min.js", "appointments.js", "interface.js"],
+        "css": ["interface.css", "sweetalert2.min.css"]
     }
   ],
+  "icons": {
+    "16": "icon16.png",
+    "128": "icon128.png"
+  },
   "permissions": [
     "activeTab",
+    "storage",
     "https://ajax.googleapis.com/"
   ]
 }
